# NESEmulation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/kits/: setup_cmake-kits.json
docs/: 6502  6502.data  6502.html  6502.js  Gemfile  _config.yml  index.html  index.md  interface.js  nes  nes.css  nes.js  nes.wasm  wasm.js  wasm.wasm
docs/blog/_posts/: 2021-01-12-wasm-cmake.md  2021-12-30-description.md
docs/diagrams/: design.plantuml
docs/test/: test.js
include/emulator/: constants.h  controller_interface.h  cpu.h  emulator.h  imemory_accessor.h  input_interface.h  iopcodes.h  memory_accessor_interface.h  nes_cpu_memory_accessor.h  nes_ppu_memory_accessor.h  opcodes_interface.h  opcodes_table.h  ppu.h  raw_memory_accessor.h  video_interface.h
include/emulator/6502/: emulator.h
include/interface/: demo_controller.h  gamepad_interface.h  keyboard_interface.h  nes_controller.h  nes_sdl_video.h  sdl_video.h
roms/nes-test/: README.md
scripts/: buildCoverage.sh
src/emulator/: CMakeLists.txt  cpu.cpp  emulator.cpp  memory_accessor_interface.cpp  nes_cpu_memory_accessor.cpp  nes_ppu_memory_accessor.cpp  nesemulation.cpp  opcodes_table.cpp  ppu.cpp  raw_memory_accessor.cpp
src/emulator/6502/: emulator.cpp
src/interface/: 6502_main.cpp  CMakeLists.txt  demo_controller.cpp  gamepad_interface.cpp  keyboard_interface.cpp  main.cpp  nes_controller.cpp  nes_main.cpp  nes_sdl_video.cpp  sdl_video.cpp
src/wasm/: CMakeLists.txt  main.cpp
src/web/: index.html
test/: CMakeLists.txt  cpu.cpp  emulator.cpp  nes_cpu_memory_accessor.cpp  opcodes_table.cpp  opcodes_table_addressing_modes.cpp  opcodes_table_ops.cpp  ppu.cpp  raw_memory_accessor.cpp  rom_tests.cpp  test.cpp
