
if(EMSCRIPTEN)
    set(CMAKE_EXECUTABLE_SUFFIX ".html")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_SDL=2") 
    set(SDL2_LIBRARIES "-s USE_SDL=2")
    add_executable(wasm sdl_video.cpp demo_controller.cpp main.cpp)
    target_link_libraries (wasm LINK_PUBLIC emulator ${SDL2_LIBRARIES})
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}") 
    # set(SDL2_INCLUDE_DIR /usr/include/SDL2)
    # include_directories(${SDL2_INCLUDE_DIR})
    # set(SDL2_LIBRARIES "-s USE_SDL=2")
    add_executable(gui sdl_video.cpp demo_controller.cpp main.cpp)

    INCLUDE(FindPkgConfig)

    PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
    INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
    target_link_libraries (gui LINK_PUBLIC emulator ${SDL2_LIBRARIES})
endif()